Set the caret properly when the cursor is at the top left of the terminal.

https://bugzilla.gnome.org/show_bug.cgi?id=166637